source/tests/errors/division_by_zero_runtime.apex
import os
zero = 0
z = 10 / zero